--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -3,6 +3,7 @@ name: Run Python Script
 on:
   schedule:
     - cron: '*/1 * * * *' # This will run the script every minute
+  workflow_dispatch: # This enables manual trigger
 
 jobs:
   build:
