--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -28,9 +28,11 @@ jobs:
         python script.py
 
     - name: Commit CSV file
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add *.csv
         git commit -m "Add generated CSV file"
-        git push
+        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
