--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.9'
 
     - name: Run script
       run: |
@@ -26,9 +26,9 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        # git config --global user.name "Action"
+        # git config --global user.email "actions@users.noreply.github.com"
         git add *.csv
         git commit -m "Add generated CSV file"
-        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+        git push 
 
