--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -13,22 +13,24 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Git
+      run: |
+        git config --global user.email "actions@users.noreply.github.com"
+        git config --global user.name "GitHub Actions"
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.x'
 
     - name: Run script
       run: |
         python script.py
-        
+
     - name: Commit CSV file
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add *.csv
         git commit -m "Add generated CSV file"
         git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
-
