--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -31,6 +31,7 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
+        timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
         git add *.csv
-        git commit -m "Add generated CSV file"
+        git commit -m "Add generated CSV file at $timestamp"
         git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
