--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -1,8 +1,8 @@
 name: Run Python Script
 
 on:
-  schedule:
-    - cron: '0 22 * * *'
+  # schedule:
+    # - cron: '0 22 * * *'
   workflow_dispatch: # This enables manual trigger
 
 jobs:
