--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Ensure you have a requirements.txt file
+          pip install -r src/requirements.txt
 
       - name: Run Web Scrapping script
         run: |
