--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -19,6 +19,11 @@ jobs:
           git config --global user.email "actions@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxslt1-dev zlib1g-dev pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -27,12 +32,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r src/requirements.txt  # Ensure you have the correct path
 
-      - name: Run Web Scrapping script
+      - name: Run Web Scraping script
         run: |
           python "Web scrapping/fbref_scrape.py"
-
 
       - name: Run Position Mapping Script
         run: |
