--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/requirements.txt  # Ensure you have the correct path
+          pip install -r requirements.txt  
 
       - name: Run Web Scraping script
         run: |
