--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -19,11 +19,6 @@ jobs:
           git config --global user.email "actions@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libxml2-dev libxslt1-dev zlib1g-dev pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -32,25 +27,43 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  
+          pip install -r requirements.txt
 
       - name: Run Web Scraping script
         run: |
           python "Web scrapping/fbref_scrape.py"
 
-      - name: Run Position Mapping Script
-        run: |
-          python "FInal_DF/Positions_Mapped.py"
-
-      - name: Run Position Dataframe Script
-        run: |
-          python "FInal_DF/Position_dfs.py"
-
-      - name: Commit CSV files
+      - name: Commit CSV files from Web Scraping script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
           git add *.csv
-          git commit -m "Scraped from FBREF at $timestamp"
+          git commit -m "Web scraping: Scraped from FBREF at $timestamp"
+          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+
+      - name: Run Position Mapping Script
+        run: |
+          python "FInal_DF/Positions_Mapped.py"
+
+      - name: Commit CSV files from Position Mapping Script
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          git add *.csv
+          git commit -m "Position mapping: Scraped from FBREF at $timestamp"
+          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+
+      - name: Run Position Dataframe Script
+        run: |
+          python "FInal_DF/Position_dfs.py"
+
+      - name: Commit CSV files from Position Dataframe Script
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          git add *.csv
+          git commit -m "Position dataframe: Scraped from FBREF at $timestamp"
           git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
