--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -1,4 +1,4 @@
-name: Run Python Script
+name: Run Python Scripts and Commit Results
 
 on:
   schedule:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:  # This enables manual trigger
 
 jobs:
-  build:
+  run_scripts:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,38 +32,38 @@ jobs:
       - name: Run Web Scraping script
         run: |
           python "Web scrapping/fbref_scrape.py"
-
-      - name: Commit CSV files from Web Scraping script
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
-          git add *.csv
-          git commit -m "Web scraping: Scraped from FBREF at $timestamp"
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+          git_status=$(git status --porcelain)
+          if [ -n "$git_status" ]; then
+            timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+            git add *.csv
+            git commit -m "Web scraping: Scraped from FBREF at $timestamp"
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
+          else
+            echo "No changes to commit."
+          fi
 
       - name: Run Position Mapping Script
         run: |
           python "FInal_DF/Positions_Mapped.py"
-
-      - name: Commit CSV files from Position Mapping Script
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
-          git add *.csv
-          git commit -m "Position mapping: Scraped from FBREF at $timestamp"
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+          git_status=$(git status --porcelain)
+          if [ -n "$git_status" ]; then
+            timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+            git add *.csv
+            git commit -m "Position mapping: Scraped from FBREF at $timestamp"
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
+          else
+            echo "No changes to commit."
+          fi
 
       - name: Run Position Dataframe Script
         run: |
           python "FInal_DF/Position_dfs.py"
-
-      - name: Commit CSV files from Position Dataframe Script
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
-          git add *.csv
-          git commit -m "Position dataframe: Scraped from FBREF at $timestamp"
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+          git_status=$(git status --porcelain)
+          if [ -n "$git_status" ]; then
+            timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+            git add *.csv
+            git commit -m "Position dataframe: Scraped from FBREF at $timestamp"
+            git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
+          else
+            echo "No changes to commit."
+          fi
